--- a/babyproducts/templates/babyproducts/index.html
+++ b/babyproducts/templates/babyproducts/index.html
@@ -86,17 +86,8 @@ For the convenience of our customers, we are offering only a select few of our e
 
 </p>
         {% else %}
-            <form method="post" action="{% url 'users:sign_in' %}">
+            <form method="post" action="{% url 'sign_up' %}">
                 {% csrf_token %}
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-
-                <input type="submit" value="Sign In"> 
-            </form>
-            <a href="{% url 'users:sign_up' %}">Sign Up</a>
         {% endif %}
         <a href="{% url 'babyproducts:product_list' %}">Explore Products</a>
     </section>
