--- a/babyproducts/templates/babyproducts/index.html
+++ b/babyproducts/templates/babyproducts/index.html
@@ -82,9 +82,7 @@
         {% if user.is_authenticated %}
             <p>Hello, {{ user.username }}! Discover a world of joy with our amazing baby products!Thank you for visiting our Online Store.
 
-For the convenience of our customers, we are offering only a select few of our everyday baby necessity products online.
-
-</p>
+For the convenience of our customers, we are offering only a select few of our everyday baby necessity products online.</p>
         {% else %}
         {% endif %}
         <a href="{% url 'babyproducts:product_list' %}">Explore Products</a>
