--- a/babyproducts/templates/babyproducts/products_list.html
+++ b/babyproducts/templates/babyproducts/products_list.html
@@ -81,7 +81,7 @@
                 <p>Description: {{ product.description }}</p>
                 <p>Price: ${{ product.price }}</p>
                 <p>Quantity: {{ product.quantity }}</p>
-                <form method="post" action="{% url 'babyproducts:add_to_cart' product.id %}">
+                <form method="post" action="{% url 'babyproducts:cart' product.id %}">
                     {% csrf_token %}
                     <input type="submit" value="Add to Cart">
                 </form>
