--- a/babyproducts/templates/babyproducts/cart.html
+++ b/babyproducts/templates/babyproducts/cart.html
@@ -141,8 +141,7 @@
   <div id="successModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal()">&times;</span>
-      <p class="success-message">Order placed successfully. Kindly collect from the nearby store.</p>
-      <a href="{% url 'babyproducts:index' %}"><button>Return to Index</button></a>
+      <p class="success-message">Action successful.</p>
     </div>
   </div>
 </section>
