Index.HTML CHANGE

--- a/babyproducts/templates/babyproducts/index.html
+++ b/babyproducts/templates/babyproducts/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Baby Products</h1>
+        <h1>Welcome you parent to Baby Products</h1>
     </header>
 
     <section>
