--- a/babyproducts/templates/babyproducts/base_generic.html
+++ b/babyproducts/templates/babyproducts/base_generic.html
@@ -1,7 +1,8 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>Welcome to baby products</title>
 </head>
 <body>
 <header>
