--- a/babyproducts/templates/babyproducts/products_list.html
+++ b/babyproducts/templates/babyproducts/products_list.html
@@ -77,7 +77,7 @@
         {% for product in products %}
             <li>
                 <h2>{{ product.name }}</h2>
-                <img src="{{babyproducts}}" alt="{{ product.name }}">
+                <img src="{{media/newone_products}}" alt="{{ product.name }}">
                 <p>Description: {{ product.description }}</p>
                 <p>Price: ${{ product.price }}</p>
                 <p>Quantity: {{ product.quantity }}</p>
