--- a/babyproducts/templates/babyproducts/index.html
+++ b/babyproducts/templates/babyproducts/index.html
@@ -80,9 +80,8 @@
 
     <section>
         {% if user.is_authenticated %}
-            <p>Hello, {{ user.username }}! Discover a world of joy with our amazing baby products! Thank you for visiting our Online Store.
-
-For the convenience of our customers, we are offering only a select few of our everyday baby necessity products online.</p>
+        <p>Hello, {{ user.username }}! Discover a world of joy with our amazing baby products! Thank you for visiting our Online Store.For the convenience of our customers, we are offering only a few of our everyday baby necessity products online.</p>
+        <p>"Are you excited to check the meaning for your little ones"</p>
         {% else %}
         {% endif %}
 
